Fix class name spacing in classes page

--- a/app/assets/stylesheets/pledgeclasstimeline.css
+++ b/app/assets/stylesheets/pledgeclasstimeline.css
@@ -39,7 +39,7 @@
 }
 
 .cbp_tmtimeline > li .cbp_tmtime span:last-child {
-    font-size: 2.2em;
+    font-size: 1.7em;
     color: #90bab6;
 }
 
